Add login screen design and gestures

--- a/you-say!/you-say!/Storyboards/Navigation.storyboard
+++ b/you-say!/you-say!/Storyboards/Navigation.storyboard
@@ -39,10 +39,10 @@
             </objects>
             <point key="canvasLocation" x="-1572" y="943"/>
         </scene>
-        <!--Navigation View Controller-->
+        <!--Navigation-->
         <scene sceneID="ART-pF-6kV">
             <objects>
-                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="4Ll-Z8-5ze" customClass="NavigationViewController" customModule="you_say_" customModuleProvider="target" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="Navigation" title="Navigation" automaticallyAdjustsScrollViewInsets="NO" useStoryboardIdentifierAsRestorationIdentifier="YES" id="4Ll-Z8-5ze" customClass="NavigationViewController" customModule="you_say_" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="jMP-VI-Ys4">
                         <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
