--- a/you-say!/you-say!/Storyboards/Base.lproj/Main.storyboard
+++ b/you-say!/you-say!/Storyboards/Base.lproj/Main.storyboard
@@ -342,7 +342,7 @@
         <!--Gender-->
         <scene sceneID="QMN-Mt-Rm0">
             <objects>
-                <viewController storyboardIdentifier="GenderVC" title="Gender" useStoryboardIdentifierAsRestorationIdentifier="YES" id="3ec-H3-hn1" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="GenderVC" title="Gender" useStoryboardIdentifierAsRestorationIdentifier="YES" id="3ec-H3-hn1" customClass="GenderViewController" customModule="you_say_" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="uD7-0U-OAL">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -363,14 +363,23 @@
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iwW-fp-1DD">
                                                 <rect key="frame" x="58.5" y="0.0" width="55" height="30"/>
                                                 <state key="normal" title="Hombre"/>
+                                                <connections>
+                                                    <action selector="maleButtonPressed:" destination="3ec-H3-hn1" eventType="touchUpInside" id="Yvh-0Q-Cib"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="deq-YI-Y1W">
                                                 <rect key="frame" x="66.5" y="71" width="39" height="30"/>
                                                 <state key="normal" title="Mujer"/>
+                                                <connections>
+                                                    <action selector="femaleButtonPressed:" destination="3ec-H3-hn1" eventType="touchUpInside" id="TOF-l1-COm"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fKa-B9-G8l">
                                                 <rect key="frame" x="8.5" y="142" width="155" height="30"/>
                                                 <state key="normal" title="Prefiero no especificar"/>
+                                                <connections>
+                                                    <action selector="otherButtonPressed:" destination="3ec-H3-hn1" eventType="touchUpInside" id="NAP-zC-vWh"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                     </stackView>
