--- a/you-say!/you-say!/Storyboards/Principal.storyboard
+++ b/you-say!/you-say!/Storyboards/Principal.storyboard
@@ -10,6 +10,104 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Filters View Controller-->
+        <scene sceneID="4gG-ub-dhJ">
+            <objects>
+                <viewController storyboardIdentifier="FiltersVC" useStoryboardIdentifierAsRestorationIdentifier="YES" id="PUw-Cb-BTk" customClass="FiltersViewController" customModule="you_say_" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Sjd-3W-517">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ENi-0j-u5d">
+                                <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                                <color key="backgroundColor" red="0.0" green="0.47450980390000003" blue="0.41960784309999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <color key="tintColor" red="0.0" green="0.29803921570000003" blue="0.25098039220000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <textAttributes key="titleTextAttributes">
+                                    <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
+                                    <color key="textColor" red="0.0" green="0.29803921570000003" blue="0.25098039220000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                </textAttributes>
+                                <items>
+                                    <navigationItem leftItemsSupplementBackButton="YES" id="t7V-iQ-yLb">
+                                        <barButtonItem key="leftBarButtonItem" title="Regresar" id="QMu-4t-ooZ">
+                                            <connections>
+                                                <action selector="returnButtonPressed:" destination="PUw-Cb-BTk" id="bML-62-eCk"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WoO-70-3xw">
+                                <rect key="frame" x="0.0" y="88" width="414" height="40"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Elige tus categorías favoritas" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KJy-sY-IXv">
+                                        <rect key="frame" x="89" y="10" width="237" height="21"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsMultipleSelection="YES" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Fhz-7Z-s7j">
+                                <rect key="frame" x="0.0" y="126" width="414" height="736"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="filterCell" rowHeight="47" id="GzW-pY-VCE" customClass="FilterTableViewCell" customModule="you_say_" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="47"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="GzW-pY-VCE" id="6WX-df-kxd">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="46.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CqQ-ry-jbG">
+                                                    <rect key="frame" x="34" y="13" width="42" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="CqQ-ry-jbG" firstAttribute="leading" secondItem="6WX-df-kxd" secondAttribute="leading" constant="34" id="IeT-0C-G7e"/>
+                                                <constraint firstAttribute="bottom" secondItem="CqQ-ry-jbG" secondAttribute="bottom" constant="12.5" id="ZcD-9h-Rnl"/>
+                                                <constraint firstItem="CqQ-ry-jbG" firstAttribute="top" secondItem="6WX-df-kxd" secondAttribute="top" constant="13" id="dAh-hu-neS"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="categoryDescription" destination="CqQ-ry-jbG" id="PO4-Ag-k6t"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="PUw-Cb-BTk" id="sfa-Ja-NQd"/>
+                                    <outlet property="delegate" destination="PUw-Cb-BTk" id="hMW-9h-1s4"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="ENi-0j-u5d" firstAttribute="leading" secondItem="6Vu-qC-fIy" secondAttribute="leading" id="3it-kI-oj1"/>
+                            <constraint firstItem="WoO-70-3xw" firstAttribute="trailing" secondItem="6Vu-qC-fIy" secondAttribute="trailing" id="HHr-0i-y0U"/>
+                            <constraint firstItem="ENi-0j-u5d" firstAttribute="trailing" secondItem="6Vu-qC-fIy" secondAttribute="trailing" id="UOw-7j-bN3"/>
+                            <constraint firstItem="Fhz-7Z-s7j" firstAttribute="top" secondItem="WoO-70-3xw" secondAttribute="bottom" constant="-2" id="aao-Cf-zTc"/>
+                            <constraint firstItem="WoO-70-3xw" firstAttribute="leading" secondItem="6Vu-qC-fIy" secondAttribute="leading" id="bah-M7-y6b"/>
+                            <constraint firstItem="Fhz-7Z-s7j" firstAttribute="trailing" secondItem="6Vu-qC-fIy" secondAttribute="trailing" id="g3B-IR-HIg"/>
+                            <constraint firstItem="ENi-0j-u5d" firstAttribute="top" secondItem="6Vu-qC-fIy" secondAttribute="top" id="igG-8Z-1mW"/>
+                            <constraint firstItem="WoO-70-3xw" firstAttribute="top" secondItem="ENi-0j-u5d" secondAttribute="bottom" id="jGQ-xa-i1i"/>
+                            <constraint firstItem="Fhz-7Z-s7j" firstAttribute="top" secondItem="ENi-0j-u5d" secondAttribute="bottom" constant="38" id="orp-2s-Ezt"/>
+                            <constraint firstItem="Fhz-7Z-s7j" firstAttribute="leading" secondItem="6Vu-qC-fIy" secondAttribute="leading" id="pPd-Jh-hRx"/>
+                            <constraint firstItem="Fhz-7Z-s7j" firstAttribute="bottom" secondItem="6Vu-qC-fIy" secondAttribute="bottom" id="qGC-A0-HMG"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="6Vu-qC-fIy"/>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="Fhz-7Z-s7j" id="h9Y-Hr-yDc"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VKm-VU-DEb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-594.20289855072474" y="1255.5803571428571"/>
+        </scene>
         <!--General-->
         <scene sceneID="Q0F-5R-98B">
             <objects>
@@ -21,6 +119,9 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bbt-bV-oc8">
                                 <rect key="frame" x="38" y="64" width="43" height="30"/>
                                 <state key="normal" title="Filtros"/>
+                                <connections>
+                                    <segue destination="PUw-Cb-BTk" kind="presentation" identifier="filterSegue" id="rHU-SP-Bo0"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cy9-wI-e8v">
                                 <rect key="frame" x="281" y="64" width="98" height="30"/>
