--- a/you-say!/you-say!/Storyboards/NewQuestion.storyboard
+++ b/you-say!/you-say!/Storyboards/NewQuestion.storyboard
@@ -18,30 +18,53 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" rotateEnabled="NO" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hdx-4G-mhq">
-                                <rect key="frame" x="0.0" y="44" width="414" height="747.5"/>
-                            </mapView>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="GC3-Ga-8vo">
-                                <rect key="frame" x="0.0" y="792.5" width="414" height="20.5"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HWW-Iv-Geb">
+                                <rect key="frame" x="0.0" y="44" width="414" height="39"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="248" verticalCompressionResistancePriority="749" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FWy-IX-4oo">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="20.5"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Selecciona la ubicación de tu pregunta" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1S8-0E-yWa">
+                                        <rect key="frame" x="59.5" y="8.5" width="295" height="20"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
-                            </stackView>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="1S8-0E-yWa" firstAttribute="centerY" secondItem="HWW-Iv-Geb" secondAttribute="centerY" constant="-1" id="Ob2-Pc-v3f"/>
+                                    <constraint firstItem="1S8-0E-yWa" firstAttribute="centerX" secondItem="HWW-Iv-Geb" secondAttribute="centerX" id="dyD-0E-GzP"/>
+                                    <constraint firstAttribute="height" constant="39" id="hbX-Bn-3xX"/>
+                                </constraints>
+                            </view>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" rotateEnabled="NO" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hdx-4G-mhq">
+                                <rect key="frame" x="0.0" y="81" width="414" height="666"/>
+                            </mapView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pts-4d-2Ez">
+                                <rect key="frame" x="16" y="755" width="382" height="50"/>
+                                <color key="backgroundColor" red="0.0" green="0.47450980390000003" blue="0.41960784309999999" alpha="0.84705882349999995" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="PnU-05-59O"/>
+                                    <constraint firstAttribute="width" constant="382" id="kiu-3w-sMl"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                <state key="normal" title=" Nueva pregunta">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="string" keyPath="cornerRadius" value="25"/>
+                                </userDefinedRuntimeAttributes>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="GC3-Ga-8vo" firstAttribute="leading" secondItem="i36-Gn-2cd" secondAttribute="leading" id="FJn-AM-nJb"/>
-                            <constraint firstItem="GC3-Ga-8vo" firstAttribute="trailing" secondItem="i36-Gn-2cd" secondAttribute="trailing" id="LvV-Hb-xLk"/>
-                            <constraint firstItem="GC3-Ga-8vo" firstAttribute="top" secondItem="hdx-4G-mhq" secondAttribute="bottom" constant="1" id="QZc-d5-4xX"/>
+                            <constraint firstItem="hdx-4G-mhq" firstAttribute="top" secondItem="HWW-Iv-Geb" secondAttribute="bottom" constant="-2" id="0CL-BH-CX1"/>
+                            <constraint firstItem="HWW-Iv-Geb" firstAttribute="trailing" secondItem="i36-Gn-2cd" secondAttribute="trailing" id="HDC-g2-EuN"/>
                             <constraint firstItem="hdx-4G-mhq" firstAttribute="leading" secondItem="i36-Gn-2cd" secondAttribute="leading" id="QhX-4o-QSQ"/>
+                            <constraint firstItem="i36-Gn-2cd" firstAttribute="bottom" secondItem="pts-4d-2Ez" secondAttribute="bottom" constant="8" id="W9z-nC-D3Z"/>
+                            <constraint firstItem="pts-4d-2Ez" firstAttribute="top" secondItem="hdx-4G-mhq" secondAttribute="bottom" constant="8" id="WvZ-0f-dtu"/>
                             <constraint firstItem="hdx-4G-mhq" firstAttribute="trailing" secondItem="i36-Gn-2cd" secondAttribute="trailing" id="ZDc-hP-s4m"/>
-                            <constraint firstItem="GC3-Ga-8vo" firstAttribute="bottom" secondItem="i36-Gn-2cd" secondAttribute="bottom" id="cWZ-2Z-jyh"/>
-                            <constraint firstItem="hdx-4G-mhq" firstAttribute="top" secondItem="i36-Gn-2cd" secondAttribute="top" id="jBz-Ea-zy7"/>
+                            <constraint firstItem="pts-4d-2Ez" firstAttribute="centerX" secondItem="i36-Gn-2cd" secondAttribute="centerX" id="bdn-lt-kgq"/>
+                            <constraint firstItem="HWW-Iv-Geb" firstAttribute="top" secondItem="i36-Gn-2cd" secondAttribute="top" id="fuV-kd-TYc"/>
+                            <constraint firstItem="HWW-Iv-Geb" firstAttribute="leading" secondItem="i36-Gn-2cd" secondAttribute="leading" id="pau-ZQ-CPO"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="i36-Gn-2cd"/>
                     </view>
